# Personal-Projects

./: README.md
C++/CLI Chess/: CMakeLists.txt
C++/CLI Chess/Chess/: Bishop.cpp  Bishop.h  Board.cpp  Board.h  CMakeLists.txt  Game.cpp  Game.h  King.cpp  King.h  Knight.cpp  Knight.h  Parser.cpp  Parser.h  Pawn.cpp  Pawn.h  Piece.cpp  Piece.h  Player.cpp  Player.h  Queen.cpp  Queen.h  Rook.cpp  Rook.h  main.cpp
C++/CLI Chess/Chess/header/: Board.h  Game.h  Parser.h  Piece.h  Player.h
C++/CLI Chess/Chess/header/Pieces/: Bishop.h  King.h  Knight.h  Pawn.h  Queen.h  Rook.h
C++/CLI Chess/build-Chess-Desktop-Debug/: CMakeCache.txt  Chess  Makefile  cmake_install.cmake
C++/CLI Chess/build-Chess-Desktop-Debug/.cmake/api/v1/reply/: cache-v2-6f7afdb19807196495d5.json  cmakeFiles-v1-26b8ff79bed007b32dd2.json  codemodel-v2-18300ad356f697ca21b5.json  target-Chess-Debug-0eb75958dd690a326321.json
C++/CLI Chess/build-Chess-Desktop-Debug/.cmake/api/v1/reply.prev/: index-2022-02-10T12-03-50-0550.json
C++/CLI Chess/build-Chess-Desktop-Release/: CMakeCache.txt  Chess  Makefile  cmake_install.cmake  qtcsettings.cmake
C++/CLI Chess/build-Chess-Desktop-Release/.cmake/api/v1/reply/: cache-v2-a56b7d4cf3f65746daa5.json  cache-v2-ad0a8ae58da922474c35.json  cache-v2-eecf8375af601dbdf15e.json  cmakeFiles-v1-1a1b3218137047f39e3e.json  cmakeFiles-v1-35842931192be9f19791.json  codemodel-v2-78e6b138a406be5ccbd7.json  index-2022-02-12T19-51-08-0436.json  index-2022-02-27T13-57-38-0826.json  index-2022-03-24T11-44-28-0777.json  index-2022-03-28T21-55-59-0667.json  target-Chess-Release-5bf742f8b1deffe042de.json
C++/CLI Chess/build-Chess-Desktop-Release/.cmake/api/v1/reply.prev/: cache-v2-0a09cda453a31caa91c5.json  cmakeFiles-v1-62d03872d2421e3b3364.json  cmakeFiles-v1-d37c3fa52b82e93d54fc.json  codemodel-v2-328897fa0b34b559afb6.json  index-2022-03-07T14-45-10-0156.json
C++/CLI Chess/build-Chess-Desktop-Release/.qtc_clangd/: compile_commands.json
C++/CLI Chess/build-Chess-Desktop-Release/.qtc_clangd/.cache/clangd/index/: Bishop.cpp.2E41218C5B6E362B.idx  Bishop.cpp.9D7965B37C969133.idx  Bishop.h.645F8A30252BEE01.idx  Bishop.h.FA5BE188549AF8FD.idx  Board.cpp.3BE42C855CAB8710.idx  Board.cpp.B73931C26F0B53D1.idx  Board.h.8C9648A6F265E207.idx  Board.h.93E625B0B7D011BA.idx  (+90 more)
(+68 files in other folders)
